Removed OS generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# OS generated files #
+######################
+*.*.bak
+*.orig
+*.sublime-workspace
+._*
+.build
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+.vs/
 /GCODE
 /Developmental
